--- a/BankPilot/src/main/webapp/WEB-INF/web.xml
+++ b/BankPilot/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+		<servlet-name>CustomerServlet</servlet-name>
+		<servlet-class>com.banks.servlets.CustomerServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>CustomerServlet</servlet-name>
+		<url-pattern>/customer/*</url-pattern>
+	</servlet-mapping>
 </web-app>
